--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "react-todo",
-  "version": "0.1.0",
-  "private": true,
+  "name": "todoReact",
+  "version": "1.0.0",
   "dependencies": {
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
